# vobcopy

./: .gitignore  ChangeLog  Changelog  FAQ  Makefile  Makefile.am  README  Release-Notes  THANKS  TODO  alternative_programs.txt  common.c  common.h  configure.ac  configure.sh  configure~  dvd.c  dvd.h  vobcopy.1  vobcopy.1.de  vobcopy.c  vobcopy.h  vobcopy.mo  vobcopy.pot  vobcopy.spec  vobcopy_1.2.0.orig.tar.gz.delta  vobcopy_1.2.0.orig.tar.gz.id  vobcopy_1.2.1.orig.tar.xz.delta  vobcopy_1.2.1.orig.tar.xz.id
debian/: .gitignore  changelog  control  copyright  docs  gbp.conf  menu  rules  vobcopy.1  vobcopy.postinst  vobcopy.postrm  watch
debian/patches/: 0001-hurd-fix.patch  0002-pointer-type.patch  0003-man-dash-hyphen-slash-en.patch  0004-man-dash-hyphen-slash-de.patch  0005-autotools.patch  0006-autoheader.patch  0007-auto-gettext.patch  0008-autoconf-deobfuscation.patch  0009-vobcopy.h-xMNTINFO.patch  0010-rm-Makefile.patch  0011-enable-warnings.patch  0012-AC_PROG_MKDIR_P.patch  0013-configure.ac-AC_SEARCH_LIB.patch  0014-clang-Wall.patch  0015-narrow-window.patch  0016-fuseiso-mount.patch  0017-trailing-colon-question-mark.patch  0018-fix-options-b-and-e-with-O.patch  0019-guard-features.h.patch  series
debian/source/: include-binaries
debian/upstream/: metadata
m4/: ChangeLog
po/: POTFILES.in
tests/: cli-smoke.sh  unit_helpers.c
